--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav a{
     display: flex;
     flex-wrap: wrap;
     padding: 20px;
-    gap: 20px;
+    gap: 10px;
 }
 
 .card{
@@ -55,7 +55,9 @@ nav a{
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 0 4px rgb(0, 0, 0, 0.1);
-    margin-bottom: 20px;
+    padding-right: 250px;
+    margin-bottom: 10px;
+    
 }
 
 .card img{
@@ -64,7 +66,10 @@ nav a{
     height: 450px;
     border: solid green 5px;
     border-radius: 8px;
-    margin-left: 230px;
-
+    margin-left: 100px;
+    margin-bottom: 20px;
 }
+
+
+
 
