--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    
 }
 
 header, nav, .card{
@@ -25,8 +26,8 @@ header{
 
 nav{
 
-    background-color: rgb(209, 209, 209);
-    text-align: center;
+    background-color: rgb(248, 248, 248);
+    
 }
 
 nav a{
@@ -38,25 +39,31 @@ nav a{
 }
 
 .container{
-
-    flex: 3 1 250px;
+    
+    width: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    padding-right: 100px;
+    gap: 10px;
+    
 }
 
 .main-section{
 
-    display: flex;
-    flex-wrap: wrap;
-    padding: 20px;
-    gap: 10px;
+    flex: 3 1 250px;
 }
 
+#layout{
+
+    margin-top: 20px;
+}
 .card{
 
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 0 4px rgb(0, 0, 0, 0.1);
-    padding-right: 250px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     
 }
 
@@ -66,13 +73,38 @@ nav a{
     height: 450px;
     border: solid green 5px;
     border-radius: 8px;
-    margin-left: 100px;
+    margin-left: 65px;
     margin-bottom: 20px;
 }
 
-#calendar{
+.frame iframe{
 
-    padding-right: 830px;
+
+    position: relative;
+    border-radius:8px;
+    width: 100%;
 }
+
+.hidden-message{
+
+    display: none;
+}
+
+#faq-button{
+
+    background-color: green;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+#faq-button:hover{
+
+    background-color: darkgreen;
+}
+
 
 
