--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ footer{
 }
 
 @media (max-width: 600px){
+
     
     body{
 
@@ -167,6 +168,15 @@ footer{
 
         font-size: 14px;
     }
+
+    .card img{
+
+    width: 90%;
+    height: 500px;
+    border: solid green 5px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
 
     nav a{
         display: inline-block;
