--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ footer{
         width: 100%;
         padding-left: 0 ;
         padding-right: 0;
+        font-size:25px;
         text-align: center;
         justify-content: center;
         box-sizing: border-box;
