--- a/style.css
+++ b/style.css
@@ -158,9 +158,11 @@ footer{
 
     header h1, header p {
 
-        font-size:15px;
         padding-left: 15px;
         padding-right: 15px;
+    }
+    h1{
+        font-size:15px;
     }
 
     .container {
