--- a/style.css
+++ b/style.css
@@ -209,6 +209,8 @@ footer{
     
     .card {
         margin: 10px 0;
+        margin-left: 5px;
+        margin-right: 5px;
         padding: 15px;
         box-sizing: border-box;
         font-size: 14px;
