--- a/style.css
+++ b/style.css
@@ -279,7 +279,9 @@ footer{
 
 
 @media (max-width: 480px) {
+    
     header h1 {
+
         font-size: 16px;
     }
 
@@ -293,7 +295,8 @@ footer{
 
     .card {
         font-size: 12px;
-        margin: 5px 0;
+        margin-left: 10px;
+        margin-right: 19px;
     }
 
     .side-bar {
