--- a/style.css
+++ b/style.css
@@ -209,8 +209,7 @@ footer{
     
     .card {
         
-        margin-left: 10px;
-        margin-right: 10px;
+        margin: 15px 0;
         padding: 15px;
         box-sizing: border-box;
         font-size: 14px;
@@ -279,7 +278,7 @@ footer{
 
 
 @media (max-width: 480px) {
-    
+
     header h1 {
 
         font-size: 16px;
@@ -290,16 +289,22 @@ footer{
     }
 
     .container {
+        
         padding: 10px;
     }
 
     .card {
+
         font-size: 12px;
-        margin-left: 10px;
-        margin-right: 19px;
+        width: 100%;
+        margin: 10px 0;
     }
 
     .side-bar {
+        margin:10px 0;
+        width: 100%;
         padding: 10px;
     }
+
+    
 }
