--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ footer{
     
     .card {
         
-        margin: 15px 0;
+        margin: 15px 15px;
         padding: 15px;
         box-sizing: border-box;
         font-size: 14px;
@@ -297,7 +297,7 @@ footer{
 
         font-size: 12px;
         width: 100%;
-        margin: 10px 0;
+        margin: 10px 15px;
     }
 
     .side-bar {
