--- a/style.css
+++ b/style.css
@@ -313,6 +313,12 @@ footer{
         font-size: 12px;
         width: 100%;
         margin: 10px 0px;
+        
+    }
+    
+    blockquote{
+
+        justify-content: center;
     }
 
     .side-bar {
