--- a/style.css
+++ b/style.css
@@ -213,6 +213,10 @@ footer{
          margin:10px 0px;
     }
     
+    #calendar{
+
+        margin:10px 0px;
+    }
     
     .side-bar {
         width: 100%; 
